--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -42,7 +42,7 @@
   --color-orange: #ff9900;
   --transition-bg: var(--bg);
   --transition-duration: 0.2s;
-  --pre-code-bg: #21163c;
+  --pre-code-bg: #150035;
   --inline-code-bg: #391e54;
   --border-light-dotted: #2c3868;
   --border-light-solid: #191f35;
@@ -379,9 +379,9 @@ article.demo {
       background: #16083f;
     }
 
-    pre > code {
+    > code {
       border-radius: 1rem;
-      background-color: var(--code-bg);
+      background-color: var(--pre-code-bg);
     }
   }
 }
